# DAGK_BanVeMayBay/api/controllers/flights.js
@@ -12,6 +12,9 @@ var helper = require(__dirname + "/helper/" + "helper");
 module.exports = {
 	getFlight,
 	getFlightInfo,
+	insertFlight,
+	deleteFlight,
+	updateFlight,
 };
 
 var connection = mysql.createConnection({
@@ -28,6 +31,7 @@ setInterval(function () {
 }, 5000);
 
 // Tìm kiếm chuyến bay
+// GET chuyenbay/?
 function getFlight(req,res,next) {
 
 	// Required
@@ -79,13 +83,11 @@ function getFlight(req,res,next) {
 			//console.log(results);
 
 			if (results.length == 0) {
-				res.status(404).send({message: "Không tồn tại chuyến bay thoả yêu cầu"});
+				res.sendStatus(404);
 				return;
 			}
 
-			var valuesDi = [];
-			var valuesVe = [];
-
+			var values = [];
 			results.forEach(function(item) {
 
 				var itemKeys = Object.keys(item);
@@ -95,30 +97,25 @@ function getFlight(req,res,next) {
 					object[key] = item[key];
 				});
 				console.log(object);
-
-				if (object.masanbaydi == fromID && object.masanbayden == toID) {
-					valuesDi.push(object);	
-				} else {
-					valuesVe.push(object);	
-				}
-				
+				values.push(object);
 			});
 
-			// console.log("results: " + values);
+			console.log("results: " + values);
 
 			res.send({
 				"chuyenbay": {
-					"chuyendi": valuesDi,
-					"chuyenve": valuesVe
+					"chuyendi": values,
+					"chuyenve": []
 				} 
 			});	
 		} else {
-			res.status(404).send({message: "Có lỗi xãy ra vùi lòng thử lại"});
+			res.sendStatus(404);
 		}
 	});
 }
 
 // Lấy thông tin chuyên bay với mã chuyến bay và ngày đi
+// GET chuyenbay/{machuyenbay}/?truong=[]
 function getFlightInfo(req,res,next) {
 
 	// GET PARAMETER
@@ -160,7 +157,7 @@ function getFlightInfo(req,res,next) {
 
 		} catch (e) {
 			queryParam = "*";
-			res.status(404).send({message: "Có lỗi xãy ra vùi lùng thử lại"});
+			res.sendStatus(404);
 			console.log(e);
 			return;
 		}
@@ -189,61 +186,19 @@ function getFlightInfo(req,res,next) {
 				itemKeys.forEach(function(key) {
 					object[key] = item[key];
 				});
-
-				if (isQueryPassenger) {
-					object["hanhkhach"] = [];
-				}
 				
+				if (isQueryPassenger) {
+
+				} else {
+				//	object["hanhkhach"] = [];	
+				}
 				arrayResults.push(object);
 			}
-
-			if (isQueryPassenger) {
-
-				var queryString = util.format("SELECT ctcb.madatcho, kh.danhxung,kh.ho,kh.ten,ctcb.hang,ctcb.mucgia FROM chitietchuyenbay ctcb join hanhkhach kh on (kh.madatcho = ctcb.madatcho) where ctcb.machuyenbay = \'%s\' and ctcb.ngay = \'%s\' ",flightID, fromDate);
-
-				console.log(queryString);
-				connection.query(queryString, function(error,results) {
-					if(error) {
-						res.status(404).send({message: "Có lỗi xãy ra vùi lùng thử lại"});
-						console.log(error);
-					} else {
-
-						for (var i = 0 ;i < results.length; i ++) {
-							var item = results[i];
-
-							var mucgia = item.mucgia;
-							var hang = item.hang;
-
-							var filterArrayResult = arrayResults.filter(function(element){
-								if (element.muc == mucgia && element.hang == hang) {
-									return true;
-								}
-								return false;
-							});
-
-							filterArrayResult.forEach(function(element){
-								var indexOf  = arrayResults.indexOf(element);
-								if (indexOf != -1) {
-									arrayResults[indexOf].hanhkhach.push(item);	
-								}
-							});
-						}
-
-						console.log(arrayResults);
-						res.send({
-							"chuyenbay": arrayResults
-						});	
-					}
-				});
-			} else {
-				console.log(arrayResults);
-				res.send({
-					"chuyenbay": arrayResults
-				});	
-			}
 			
-			
-
+			console.log(arrayResults);
+			res.send({
+				"chuyenbay": arrayResults
+			});	
 		} else {
 			console.log(err);
 			res.sendStatus(404);
@@ -251,6 +206,295 @@ function getFlightInfo(req,res,next) {
 	});
 
 }
+
+// POST chuyenbay/
+function insertFlight(req,res,next) {
+	var chuyenbay = req.swagger.params.chuyenbay.value.chuyenbay;
+
+	var machuyenbay = chuyenbay.machuyenbay;
+	var masanbaydi = chuyenbay.masanbaydi;
+	var masanbayden = chuyenbay.masanbayden;
+	var ngaygiodi = chuyenbay.ngaydi;
+	var hang = chuyenbay.hang;
+	var muc = chuyenbay.muc;
+	var soghe = chuyenbay.soghe;
+	var giaban = chuyenbay.giaban;
+
+	var ngaydi = dateformat(new Date(ngaygiodi * 1000), "yyyy-mm-dd");
+	var giodi = dateformat(new Date(ngaygiodi * 1000), "hh:MM");
+
+	if ( hang == undefined || ! (hang.localeCompare('C') || hang.localeCompare('Y') ) ){
+		
+		res.status(404).send({
+				'message': "Hạng phải là C hoặc Y"
+		});
+		return;
+	}
+
+	if (muc != undefined && ! (muc.localeCompare('E') || muc.localeCompare('G') || muc.localeCompare('F') ) ){
+		
+		res.status(404).send({
+				'message': "Mức giá phải là E hoặc F hoặc G"
+		});
+		return;
+	}
+
+	connection.query("INSERT INTO chuyenbay VALUES(?,?,?,?,?,?,?,?,?)", [machuyenbay, masanbaydi, masanbayden, ngaydi, giodi,hang,muc,soghe,giaban], function(err,results) {
+		if(err) {
+			res.status(404).send({
+				'message': "Thêm chuyến bay thất bại vui lòng kiểm tra lại giá trị",
+				'error': err
+			});
+			console.log(err);
+		} else {
+			var object = {
+				'machuyenbay': machuyenbay,
+				 'masanbaydi': masanbaydi,
+				  'masanbayden': masanbayden,
+				   'ngaydi':ngaygiodi,
+				    'giodi':ngaygiodi,
+				    'hang': hang,
+				    'muc': muc,
+				    'soghe': soghe,
+				    'giaban' : giaban
+			};
+			res.send({
+				"chuyenbay": object,
+				"message": results.message
+			});
+		}
+	});
+}
+
+// PUT chuyenbay/?machuyenbay?masanbaydi?masanbayden?ngaydi?hang?muc
+function updateFlight(req,res,next) {
+
+	var chuyenbay = req.swagger.params.chuyenbay.value.chuyenbay;
+	
+
+	var machuyenbay = chuyenbay.machuyenbay;
+	var masanbaydi = chuyenbay.masanbaydi;
+	var masanbayden = chuyenbay.masanbayden;
+	var ngaygiodi = chuyenbay.ngaydi;
+	var hang = chuyenbay.hang;
+	var muc = chuyenbay.muc;
+	var soghe = chuyenbay.soghe;
+	var giaban = chuyenbay.giaban;
+	var ngaydi = dateformat(new Date(ngaygiodi * 1000), "yyyy-mm-dd");
+	var giodi = dateformat(new Date(ngaygiodi * 1000), "hh:MM");
+	var updateChuyenbay = {
+		'machuyenbay': machuyenbay,
+		'masanbaydi': masanbaydi,
+		'masanbayden': masanbayden,
+	   	'ngaydi':ngaydi,
+	    'giodi':giodi,
+	    'hang': hang,
+	    'muc': muc,
+	    'soghe': soghe,
+	    'giaban' : giaban
+	}
+
+	if ( hang == undefined || ! (hang.localeCompare('C') || hang.localeCompare('Y') ) ){
+		
+		res.status(404).send({
+				'message': "Hạng phải là C hoặc Y"
+		});
+		return;
+	}
+
+	if (muc != undefined && ! (muc.localeCompare('E') || muc.localeCompare('G') || muc.localeCompare('F') ) ){
+		
+		res.status(404).send({
+			'message': "Mức giá phải là E hoặc F hoặc G"
+		});
+		return;
+	}
+
+	
+	
+	var flightID = req.swagger.params.machuyenbay.value;
+	
+	var fromID = req.swagger.params.masanbaydi.value;
+	var toID = req.swagger.params.masanbayden.value;
+	var fromTimeStamp = req.swagger.params.ngaydi.value; 
+
+ 	var hangVe = req.swagger.params.hang.value; 
+ 	var mucgia = req.swagger.params.mucgia.value; 
+	var fromTimeString = dateformat(new Date(fromTimeStamp * 1000), "yyyy-mm-dd");
+
+
+
+	var whereString = util.format("machuyenbay = \'%s\' AND masanbaydi = \'%s\' AND masanbayden = \'%s\' AND ngaydi  = \'%s\' AND hang = \'%s\' AND muc = \'%s\'", flightID, fromID,toID,fromTimeString,hangVe,mucgia);
+	console.log(whereString);
+	connection.query("Update chuyenbay SET ? WHERE " + whereString, updateChuyenbay, function(error, results) {
+		if(error) {
+			res.status(404).send({
+				'message': "Thêm chuyến bay thất bại vui lòng kiểm tra lại giá trị",
+				'error': error
+			});
+			console.log(error);
+		} else {
+			console.log(results);
+			updateChuyenbay.ngaydi = ngaygiodi;
+			updateChuyenbay.giodi = ngaygiodi;
+			res.send({
+				"chuyenbay": updateChuyenbay,
+				"message": results.message
+			});
+		}
+	})
+
+}
+
+// DELETE chuyenbay/?machuyenbay?masanbaydi?masanbayden?ngaydi?hang?muc
+function deleteFlight(req,res,next) {
+
+	var flightID = req.swagger.params.machuyenbay.value;
+	var fromID = req.swagger.params.masanbaydi.value;
+	var toID = req.swagger.params.masanbayden.value;
+	var fromTimeStamp = req.swagger.params.ngaydi.value; 
+ 	var hangVe = req.swagger.params.hang.value; 
+ 	var mucgia = req.swagger.params.mucgia.value; 
+	var fromTimeString = dateformat(new Date(fromTimeStamp * 1000), "yyyy-mm-dd");
+
+	var whereString = util.format("machuyenbay = \'%s\' AND masanbaydi = \'%s\' AND masanbayden = \'%s\' AND ngaydi = \'%s\' AND hang = \'%s\' AND muc = \'%s\'", flightID, fromID,toID,fromTimeString,hangVe,mucgia);
+	console.log(whereString);
+	connection.query("DELETE FROM chuyenbay WHERE " + whereString, function(error,results){
+		if(error) {
+			res.status(404).send({
+				"message": "Có lỗi xãy ra vui lòng thử lại",
+				'error': error
+			});
+			console.log(error);
+		} else {
+			res.send({
+				"affectedRows": results.affectedRows
+			});
+		}
+	})
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// // BOOK vé với POST trả về mã đặt chỗ
+// function bookTicket(res,req,next) {
+
+// 	// Required
+// 	var flightID = req.swagger.params.machuyenbay.value;
+// 	var fromDateTimeStamp = req.swagger.params.ngaydi.value;
+// 	var mucgia = req.swagger.params.muc.value;
+// 	var hang = req.swagger.params.hang.value;
+// 	var soghe = req.swagger.params.soghe.value; 
+
+// 	var fromDate = dateformat(new Date(fromDateTimeStamp * 1000), "yyyy-mm-dd");
+
+	
+// 	var queryGiaVe = util.format("select giaban from chuyenbay where machuyenbay = \'%s\' and ngaydi = \'%s\' and hang = \'%s\' and muc = \'%s\'", "CF108","2016/10/20","C","F");
+
+// 	connection.query(queryGiaVe, function(err, results) {
+// 		try {
+// 			if (!err) {
+// 				if (results != undefined ) { 
+// 					if (results.length == 0) {
+// 						res.sendStatus(404);
+// 					} else {
+// 						console.log(results);
+// 						var madatcho = generateUUID.generate(6);
+// 						var thoigiancapphat = dateformat(new Date(), "yyyy-mm-dd");
+// 						var queryDatCho = util.format("INSERT INTO DATCHO(madatcho, thoigiandatcho, tongtien, trangthai) values(\'%s\',\'%s\',%d,%d)", madatcho, thoigiancapphat , results[0].giaban * soghe, 0);
+						
+// 						var queryChiTietChuyenBay = util.format("INSERT INTO chitietchuyenbay(madatcho, machuyenbay, ngay, hang, mucgia) values(\'%s\',\'%s\',\'%s\',\'%s\',\'%s\')",madatcho,flightID,fromDate,hang,mucgia);
+
+// 						console.log(queryDatCho);
+// 						console.log(queryChiTietChuyenBay);
+
+// 						connection.query(queryDatCho, function(err,results) {
+
+// 							if(!err) {
+// 								con
+// 								connection.query(queryChiTietChuyenBay, function(err,results) {
+// 									if(!err) {
+// 										res.send({
+// 											"datcho" : {
+// 												"madatcho": madatcho,
+// 												"machuyenbay": machuyenbay,
+// 												"ngaydi": fromDate,
+// 												"thoigiancapphat": thoigiancapphat,
+// 												"thoihansudung": 5*60*1000
+// 											}
+// 										});
+// 									} else {
+// 										res.sendStatus(404);
+// 										var queryDeleteDatCho = util.format("DELETE FROM datcho where madatcho = \'%s\'",madatcho);
+// 										console.log(queryDeleteDatCho); 
+
+// 										connection.query(queryDeleteDatCho, function(err,results) {
+// 											if (!err) {
+// 												console.log(err);
+// 											}
+// 										});
+// 									}
+// 								});
+// 							} else {
+// 								res.sendStatus(404);
+// 							}
+// 						});
+// 					} }
+// 			} else {
+// 				res.sendStatus(404);
+// 				console.log(err);
+// 			}
+// 		} catch (e) {
+// 			res.sendStatus(404);
+// 		}
+// 	});
+// }
+
+// function updateInfoTicket(res,req,nxet) {
+
+// 	var madatcho = req.swagger.params.madatcho.value;
+	
+// }
 
 
 
