# DAGK_BanVeMayBay/api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: QuanLySanBay
 # during dev, should point to your local machine
-host: 139.162.58.193:10011
+host: localhost:10011
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -103,19 +103,19 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     post:
       operationId: insertFlight
-      description: Thêm chặn bay
+      description: Thêm chuyến bay 
       parameters:
       - name: chuyenbay
         in: body
         description: chuyến bay thêm vào
         required: true
         schema:
-          $ref: "#/definitions/FlightResponse"
+          $ref: "#/definitions/FlightInfo"
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/FlightResponse"
+            $ref: "#/definitions/FlightInfoRespone"
         "404":
           description: Failure
           schema:
@@ -124,6 +124,106 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    put:
+        operationId: updateFlight
+        description: Cập nhật chuyến bay
+        parameters:
+        - name: machuyenbay
+          type: string
+          in: query
+          description: Mã chuyến bay
+          required: true
+        - name: masanbaydi
+          type: string
+          in: query
+          description: Mã sân bay đi
+          required: true
+        - name: masanbayden
+          type: string
+          in: query
+          description: Mã sân bay đến
+          required: true
+        - name: ngaydi
+          type: number
+          in: query
+          description: TimeStamp ngày đi
+          required: true
+        - name: hang
+          type: string
+          in: query
+          description: Hạng vé "C" là phổ thông "Y" là thương gia
+          required: true
+        - name: mucgia
+          type: string
+          in: query
+          description: Mức giá của vé mặc định là tất cả "E,F,G"
+          required: true
+        - name: chuyenbay
+          in: body
+          description: chuyến bay thêm vào
+          required: true
+          schema:
+            $ref: "#/definitions/FlightInfo"
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/FlightInfoRespone"
+          "404":
+            description: Failure
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+    delete:
+      operationId: deleteFlight
+      description: Xoá chuyến bay
+      parameters:
+      - name: machuyenbay
+        type: string
+        in: query
+        description: Mã chuyến bay
+        required: true
+      - name: masanbaydi
+        type: string
+        in: query
+        description: Mã sân bay đi
+        required: true
+      - name: masanbayden
+        type: string
+        in: query
+        description: Mã sân bay đến
+        required: true
+      - name: ngaydi
+        type: number
+        in: query
+        description: TimeStamp ngày đi
+        required: true
+      - name: hang
+        type: string
+        in: query
+        description: Hạng vé "C" là phổ thông "Y" là thương gia
+        required: true
+      - name: mucgia
+        type: string
+        in: query
+        description: Mức giá của vé mặc định là tất cả "E,F,G"
+        required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/FlightInfoRespone"
+        "404":
+          description: Failure
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"          
   /chuyenbay/{machuyenbay}:
     x-swagger-router-controller: flights
     get:
@@ -149,7 +249,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/FlightResponse"
+            $ref: "#/definitions/SuccessResponse"
         "404":
           description: Failure
           schema:
@@ -363,6 +463,61 @@ definitions:
           hang: C,
           mucgia: G,
         }]
+  FlightInfoRespone:
+  
+    properties:
+      chuyenbay:
+        type: object
+        properties:
+          machuyenbay:
+            type: string
+          masanbaydi:
+            type: string
+          masanbayden:
+            type: string
+          ngaydi:
+            type: number
+            description: timestamp unix
+          giodi:
+            type: number
+            description: timestamp unix
+          hang:
+            type: string
+          muc:
+            type: string
+          soghe:
+            type: string
+          giaban:
+            type: string
+      message:
+        type: string
+  FlightInfo:
+    required:
+      - chuyenbay
+    properties:
+      chuyenbay:
+        type: object
+        properties:
+          machuyenbay:
+            type: string
+          masanbaydi:
+            type: string
+          masanbayden:
+            type: string
+          ngaydi:
+            type: number
+            description: timestamp unix
+          giodi:
+            type: number
+            description: timestamp unix
+          hang:
+            type: string
+          muc:
+            type: string
+          soghe:
+            type: string
+          giaban:
+            type: string
   FlightResponse:
     properties:
       chuyenbay:
@@ -638,6 +793,10 @@ definitions:
           ]
       }
   ErrorResponse:
+    properties:
+      message:
+        type: string
+  SuccessResponse:
     required:
       - message
     properties:
